Fixed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.unity.package-4",
+    "name": "com.zapp.test",
     "displayName": "Package Number 4",
     "version": "0.0.1",
     "unity": "2018.3",
